--- a/Anti Spoofing.tex
+++ b/Anti Spoofing.tex
@@ -143,9 +143,12 @@ The pattern is described by an illumination matrix which is  taken as relative t
 \bibliographystyle{IEEEtran} %biblography built using Bibdesk came along with the LaTeX package
 \bibliography{/Users/DBRSJ/Desktop/LaTeX/LaTeX_tutorial/References/Spoof_ref.bib}
 \addcontentsline{toc}{section}{\numberline{}References}
+\cleardoublepage\
 
-
-
+%Appendix starts here
+\appendix
+\section{LBP approach}
+This is the appendix.
 
 
 \end{document}
