Maths formatiing donegit add ./

--- a/Anti Spoofing.tex
+++ b/Anti Spoofing.tex
@@ -223,5 +223,27 @@ $$\sqrt{4} < 5$$
 $$\pi \approx 3 $$
 $$\pi \times \sqrt{4} < 15 $$
 
+Formatting the above written formulas : 
+%Formatting Maths : 
+\begin{eqnarray}
+	\sqrt{4} &=& 2 \\ % & sign is used for margining around the symbol
+	\sqrt{4} &\neq& 5 \\ %neq is for not equal
+	\sqrt{4} &<& 5 \\
+	\pi &\approx& 3 \\
+	\pi &\times& \sqrt{4} < 15 %the last line does'nt have \\ sign at the end
+\end{eqnarray}
+
+\begin{equation} \label{eq:spoofing}
+x^2 + 7x - 5 = 0
+\end{equation}
+
+\begin{equation} \label{eq:second}
+x^2 - 9x +1 = 0
+\end{equation}
+
+The first equation is equation \ref{eq:spoofing},which you can try and solve(these are only fake examples for his tutorial only)
+
+
+
 
 \end{document}
